# w2samps

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  CMakeLists.txt  build.sh
.claude/: settings.json
src/: EuclideanSequencer.cpp  EuclideanSequencer.h  FluCoMaAnalyser.cpp  FluCoMaAnalyser.h  FuncGen.h  GranularVoice.h  KeyDetector.h  MasterClock.h  OnsetDetector.h  OnsetHitMapper.h  PhaseTransform.h  Playlist.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  SampleDatabase.cpp  SampleDatabase.h  SampleLibrary.cpp  SampleLibrary.h  SamplerVoice.cpp  SamplerVoice.h  SoundBrowser.h  TimelineEnv.h  VoiceChannel.h  WaveformDisplay.h
